--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "helioslauncher",
+  "name": "Esme Launcher",
   "version": "2.2.1",
-  "productName": "Helios Launcher",
+  "productName": "Esme Luncher",
   "description": "Modded Minecraft Launcher",
-  "author": "Daniel Scalzi (https://github.com/dscalzi/)",
+  "author": "Daniel Scalzi (https://github.com/dscalzi/) and C.Rapin",
   "license": "UNLICENSED",
-  "homepage": "https://github.com/dscalzi/HeliosLauncher",
+  "homepage": "https://github.com/camu-tw",
   "bugs": {
     "url": "https://github.com/dscalzi/HeliosLauncher/issues"
   },
